[package]
name = "logger"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1.0.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
chrono = "0.4.19"
ctor = "0.1.21"
dotenv = "0.15.0"
pretty_env_logger = "0.4.0"
log = "0.4.14"

[target.'cfg(target_arch = "wasm32")'.dependencies]
chrono = { version = "0.4.19", features = ["wasmbind"] }
wasm-bindgen = "0.2.78"
wee_alloc = "0.4.5"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.28"
