[package]
name = "logger"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "=1.0.0"
time = { version = "=0.3.9", features = ["formatting"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ctor = "=0.1.22"
dotenv = "=0.15.0"
instant = "=0.1.12"
pretty_env_logger = "=0.4.0"
log = "=0.4.16"

[target.'cfg(target_arch = "wasm32")'.dependencies]
instant = { version = "=0.1.12", features = ["wasm-bindgen"] }
wasm-bindgen = "=0.2.80"
wee_alloc = "=0.4.5"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "=0.3.30"
