[package]
name = "logger"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1.0"
time = { version = "0.3", features = ["formatting"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ctor = "0.2"
dotenvy = "0.15"
instant = "0.1"
pretty_env_logger = "0.5"
log = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
instant = { version = "0.1", features = ["wasm-bindgen"] }
wasm-bindgen = "0.2"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
