[package]
name = "request"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
dotenvy = "0.15"
envy = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.25", features = ["derive"] }
tokio = { version = "1.27", features = ["full"] }
