[package]
name = "request"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
config = { version = "0.13", features = ["toml"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.25", features = ["derive"] }
tokio = { version = "1.27", features = ["full"] }
